# jobstack-bap

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  postman-collection.json
.cargo/: config.toml
config/: example.yaml  match_score.json
migrations/: 20250702105235_job_applications.sql  20250805051511_draft_applications.sql  20260113090834_profiles.sql  20260202091820_jobs.sql  20260204070509_job_profile_matches.sql  20260307193403_add_is_active_column_to_jobs.sql  20260324053703_add_embedding_to_jobs.sql
src/: config.rs  lib.rs  main.rs  state.rs
src/cron/: fetch_jobs.rs  fetch_profiles.rs  job_profile_match.rs  mod.rs  notification.rs
src/db/: job.rs  job_applications.rs  job_draft.rs  match_score.rs  mod.rs  profiles.rs
src/events/: consumer.rs  handler.rs  mod.rs  publisher.rs  utils.rs
src/http/: http_server.rs
src/http/routes/: admin.rs  events.rs  job.rs  mod.rs  search.rs  select.rs  status.rs  webhook.rs
src/models/: core.rs  events.rs  job_apply.rs  mod.rs  search.rs  select.rs  status.rs  webhook.rs
src/services/: admin.rs  empeding.rs  events.rs  job_apply.rs  job_draft.rs  match_score.rs  mod.rs  payload_generator.rs  profiles.rs  search.rs  select.rs  status.rs  webhook.rs
src/utils/: batching.rs  cron.rs  empeding.rs  external_apis.rs  hash.rs  http_client.rs  job.rs  logging.rs  match_score.rs  mod.rs  notification.rs  profiles.rs  redis.rs  search.rs  shared.rs
src/vector/: faiss_service.rs  index_store.rs  mod.rs
src/workers/: mod.rs  processor.rs  redis_event_worker.rs
