[package]
name = "bap-onest-lite"
version = "0.1.0"
edition = "2021"
authors = ['Dhiway Networks <info@dhiway.com>']
license = "MIT"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt","json","time"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.17.0", features = ["v4"] }
anyhow = "1.0.98"
redis = { version = "0.32.2", features = ["tokio-comp"] }
sha2 = "0.10.9"
dashmap = "6.1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-cron-scheduler = "0.14.0"
chrono-tz = "0.10.4"
indexmap = "2.11.1"
